--- a/style.css
+++ b/style.css
@@ -1,37 +1,94 @@
+/* Common CSS */
 * {
+    box-sizing: border-box;
 
+}
+.container {
+    max-width: 1280px;
+    margin: auto;
+}
+
+.Panda-btn {
+    border-radius: 6px;
+
+    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);
+    padding: 15px 35px;
+    border: none;
+    color: #fff;
+    font-weight: 500;
 }
 
 
-
+/* Custom CSS */
 nav {
     display: flex;
     justify-content: space-between;
+    padding: 10px 0;
 
 }
-/*ul {
-    display: flex;
-}
 
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}*/
 .search-parent {
     position: relative;
+    color: rgb(186, 186, 186);
 }
 .search-parent input {
     border-radius: 66px;
     padding: 15px 30px;
     width: 500px;
     background-color: #F1F1F1;
+    border: none;
 
 }
 .search-parent i {
     position: absolute;
     top: 17px;
-    right: 15px;
+    right: 20px;
 }
+
+.nav-items {
+    display: flex;
+    gap: 10px;
+    list-style: none;
+}
+.nav-items li a {
+    text-decoration: none;
+    color: #707070;
+    font-weight: 600;
+    font-size: 16px;
+
+/*   Banner   */
+}
+.banner {
+    background-color: #FEEAE9;
+    display: flex;
+    justify-content: space-between;
+    gap: 5px;
+    align-items: center;
+    padding: 28px;
+    border: 10px;
+    margin-top: 15px;
+}
+.banner p {
+    color: #4E4E4E;
+    width: 500px;
+    border-radius: 15px;
+}
+.banner img {
+    width: 402px;
+    height: 378px;
+}
+.banner h2 {
+    color: rgb(31, 31, 31);
+    font-size: 52px;
+    font-weight: 700;
+    /* line-height: 84px; */
+    /* text-align: left; */
+}
+.banner-price {
+    color: #FF136F;
+    font-weight: bold;
+    font-size: 52px;
+    margin-bottom: 0;
+    display: block;
+}
+
