--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Common CSS */
 * {
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 
 }
 .container {
@@ -67,11 +68,11 @@ nav {
     padding: 28px;
     border: 10px;
     margin-top: 15px;
+    border-radius: 15px;
 }
 .banner p {
     color: #4E4E4E;
-    width: 500px;
-    border-radius: 15px;
+    max-width: 500px;
 }
 .banner img {
     width: 402px;
@@ -92,3 +93,33 @@ nav {
     display: block;
 }
 
+/* category */
+
+.categories-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    border-radius: 25px;
+    flex: 1;
+}
+.categories-card h3 {
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 30px;
+}
+.categories-card-section {
+    display: flex;
+    gap: 26px;
+    width: 100%;
+}
+
+.categories-card-1 {
+    background: linear-gradient(151.85deg, rgb(255, 156, 53) 14.537%,rgb(255, 208, 25) 84.486%);
+}
+.categories-card-2 {
+    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);
+}
+.categories-card-3 {
+    background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%,rgb(63, 7, 248) 74.29%);
+}
